--- a/.flow.yml
+++ b/.flow.yml
@@ -1,6 +1,7 @@
 flow:
   - envs:
      FLOW_AGENT_WORKSPACE: "${HOME}/agent-workspace"
+     FLOW_OUTPUT_ENV_PREFIX: "IOS_OUTPUT_"
      IOS_PROJECT_NAME: "flowcidemo"
      IOS_SCHEME: "flowclibasic"
      IOS_EXPORT_METHOD: "development"
@@ -29,5 +30,9 @@ flow:
           array=$(find ${IOS_IPA_DIR} -name *.ipa 2>&1)
           for file in ${array[@]}
           do
-            echo $file 
+            export IOS_OUTPUT_IPA_PATH=$file
           done
+          
+      - name: Print IPA Path
+        script: |
+          echo ${IOS_OUTPUT_IPA_PATH}
